--- a/templates/freshFruit/index.html
+++ b/templates/freshFruit/index.html
@@ -38,9 +38,9 @@
 			<div class="next"></div>
 			<ul class="points"></ul>
 		</div>
-		<div class="adv fl">
-			<a href="#"><img src="{% static 'images/adv01.jpg' %}"></a>
-			<a href="#"><img src="{% static 'images/adv02.jpg' %}"></a>
+		<div class="adv fl" >
+			<a href="#" style="width: 240px;height: 135px;"><img src="{% static 'images/adv01.jpg' %}"></a>
+			<a href="#" style="width: 240px;height: 135px;"><img src="{% static 'images/adv02.jpg' %}"></a>
 		</div>
 	</div>
 
