--- a/templates/freshFruit/callus.html
+++ b/templates/freshFruit/callus.html
@@ -15,7 +15,7 @@
 					</tr>
 					<tr>
 						<td align="right">
-							<img src="{% static 'images/logo.png' %}">
+							<a href="{% url 'index:indexPage' %}"><img src="{% static 'images/logo.png' %}"></a>
 						</td>
 					</tr>
 					<tr><td align="right"><font color="#5f5f5f" size='3' face="Microsoft Yahei"><b>call us:</b></font></td></tr>
