--- a/templates/freshFruit/index.html
+++ b/templates/freshFruit/index.html
@@ -16,7 +16,7 @@
 				<li class="interval">|</li>
 				<li><a href="">手机生鲜</a></li>
 				<li class="interval">|</li>
-				<li><a href="">抽奖</a></li>
+				<li><a href="{%url 'index:choujiang'%}">抽奖</a></li>
 			</ul>
 		</div>
 	</div>
