--- a/templates/freshFruit/list.html
+++ b/templates/freshFruit/list.html
@@ -51,7 +51,7 @@
 			<div class="pagenation">
 				<a href="#" id='toleft'><上一页</a>
 				{%for i in goodslist.plist%}
-				<a href="{% url 'goodslist:list'%}?order={{goodslist.ordertype}}&&sort={{i.sort}}&&page={{i}}" class="{%if i == goodslist.pIndex %}active{%endif%}">{{i}}</a>		
+				<a href="{% url 'goodslist:list'%}?order={{goodslist.ordertype}}&&sort={{goodslist.goodsort.id}}&&page={{i}}" class="{%if i == goodslist.pIndex %}active{%endif%}">{{i}}</a>		
 				{%endfor%}
 				<a href="#" id='toright'>下一页></a>
 			</div>
