--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -10,7 +10,7 @@
 			<ul class="goods_type_list clearfix">
 			{% if query %}
 					<h3 style="font-size: 15px;color: red; margin-top: -20px">搜索结果如下：</h3>
-				{% for result in page.object_list %}
+				{% for result in object_list %}
 				<li>
 					<a href="/detail/?goodsId={{ result.object.id }}"><img src="{% static result.object.imgPath %}"></a>
 					<h4><a href="/detail/?goodsId={{result.object.id}}">{{ result.object.goodsName }}</a></h4>
