--- a/templates/freshFruit/list.html
+++ b/templates/freshFruit/list.html
@@ -28,9 +28,9 @@
 	
 		<div class="r_wrap fr clearfix">
 			<div class="sort_bar">
-				<a href="{% url 'goodslist:list'%}?order=id&&sort={{goodslist.sort}}&&page={{goodslist.pindex}}" class="{{ goodslist.active.id }}">默认</a>
-				<a href="{% url 'goodslist:list'%}?order=price&&sort={{goodslist.sort}}&&page={{goodslist.pindex}}" class="{{goodslist.active.price}}">价格</a>
-				<a href="{% url 'goodslist:list'%}?order=count&&sort={{goodslist.sort}}&&page={{goodslist.pindex}}" class="{{goodslist.active.count}}">人气</a>
+				<a href="{% url 'goodslist:list'%}?order=id&&sort={{goodslist.goodsort.id}}&&page={{goodslist.pindex}}" class="{{ goodslist.active.id }}">默认</a>
+				<a href="{% url 'goodslist:list'%}?order=price&&sort={{goodslist.goodsort.id}}&&page={{goodslist.pindex}}" class="{{goodslist.active.price}}">价格</a>
+				<a href="{% url 'goodslist:list'%}?order=count&&sort={{goodslist.goodsort.id}}&&page={{goodslist.pindex}}" class="{{goodslist.active.count}}">人气</a>
 			</div>
 
 			<ul class="goods_type_list clearfix">
